add support for concurrent runs, better agent support, running a locally built jar (#7)
* add support for unique working dir
- allows multiple script runners to be run concurrently
- add some additional safe guard checks
- improve readme
- move JFR logs to logs directory
* ad support for using a locally built jar using -DluceeJar=/path/to/jar
* add docs about using SystemOutput()
* improve execute documentation and examples
* Update README.md
* improve webroot handling, add tests
* escape windows cmd webroots
* add jfr support, cleanup readme, add examples
* add flightRecordingSettings and PrintInlining
* use javax or jakarta jars based on version